--- a/frontend-miniapp/index.html
+++ b/frontend-miniapp/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>GraceHub Panel</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -11,4 +12,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
